# geoshenanigans

./: .gitmodules  renovate.json
.github/workflows/: build.yml  deploy-tiles.yml  geocoder-build-watchdog.yml  geocoder-build.yml  geocoder-cache-test.yml  geocoder-nightly.yml  geocoder-profile.yml  geocoder-s3-bench.yml  geocoder-s3-test.yml  geocoder-test-poi.yml  geocoder-tests.yml  geocoder-tiger.yml  geocoder-wikidata.yml  pmtiles.yaml  s3-cleanup.yml  s3-speed-test.yml  terragrunt.yaml  test.yml  tiles-cleanup.yml  tiles-deploy.yml  tiles-file.yml  tiles-worker.yml
.mise/: config.toml
deployment/: .env
deployment/modules/cloudflare/geocoder/: config.tf  main.tf  providers.tf  terragrunt.hcl  variables.tf
deployment/modules/cloudflare/metrics-collector/: providers.tf  terragrunt.hcl  variables.tf  workers.tf
deployment/modules/cloudflare/reverse-geocoding/: config.tf  providers.tf  terragrunt.hcl  tigris.tf  variables.tf
deployment/modules/cloudflare/tiles/: .terraform.lock.hcl  config.tf  d1.tf  kv.tf  providers.tf  r2.tf  terragrunt.hcl  tigris.tf  tiles.tfvars.json  variables.tf  workers.tf
deployment/modules/cloudflare/tiles-worker/: .terraform.lock.hcl  alerts.tf  config.tf  dashboards.tf  remote-state.tf  terragrunt.hcl  tiles.dev.tfvars.json  tiles.tfvars.json  variables.tf  workers.tf
deployment/scripts/: kv-cleanup.sh  r2-cleanup.sh  tigris-cleanup.sh
geocoder/: CODE_REVIEW.md  Dockerfile  IMMICH_INTEGRATION.md  NOMINATIM_REFERENCE.md  PATCHING.md  POI_OVERVIEW.md  README.md  docker-compose.yml  entrypoint.sh
geocoder/builder/: CMakeLists.txt  HANDOFF.md  OPTIMIZATION_LOG.md  PATCHING.md  configurations.template.json
geocoder/builder-ui/: .gitignore  package-lock.json  package.json  vite.config.ts
geocoder/builder-ui/scripts/: build_configurations.py
geocoder/builder-ui/src/: app.css  app.html
geocoder/builder-ui/src/lib/: resolver.ts  types.ts
geocoder/builder-ui/src/routes/: +layout.ts  (+1 more)
geocoder/builder-ui/static/: configurations.json
geocoder/builder/src/: admin_rank_config.h  build_index.cpp  cache.cpp  cell_index.cpp  cell_index.h  continent_boundaries.cpp  continent_boundaries.h  continent_filter.cpp  continent_filter.h  geometry.h  id_allocator.h  interpolation.cpp  parsed_data.h  pbf_reader.cpp  pbf_reader.h  poi_classify.h  postcode_validation.h  ring_assembly.cpp  s2_helpers.cpp  s2_helpers.h  string_pool.h  types.h
geocoder/builder/tests/: test_framework.h  test_geometry.cpp  test_id_allocator.cpp  test_interpolation.cpp  test_main.cpp  test_patch_format.cpp  test_poi_classify.cpp  test_postcode.cpp  test_ring_assembly.cpp  test_string_pool.cpp
geocoder/builder/tools/: extract_wikidata_sitelinks.py  geocoder_canonicalize.cpp  geocoder_diff.cpp  geocoder_patch.cpp  patch_format.h  simplify_compare.cpp
geocoder/node/: Cargo.toml
geocoder/node/src/: lib.rs
geocoder/server/: Cargo.toml  admin_levels.json
geocoder/server/examples/: grid_query.rs  pc_debug.rs  poi_debug.rs
geocoder/server/src/: auth.rs  downloader.rs  lib.rs  main.rs  region_state.rs  wasm_chunked.rs
geocoder/test-portal/: Dockerfile  docker-compose.yml  entrypoint.sh  index.html
geocoder/ts-port/: package.json  tsconfig.json
geocoder/ts-port/src/: admin-config.ts  byte-source.ts  cell-readers.ts  find-admin.ts  find-places.ts  find-pois.ts  format-address.ts  geocoder.ts  geometry.ts  index-loader.ts  index.ts  poi-meta.ts  polygon-distance.ts  query-geo.ts  resolve-postcode.ts  string-pool.ts  types.ts
geocoder/ts-port/test/: bench.ts  smoke.ts
geocoder/wasm-port/: .gitignore  Cargo.toml  Containerfile  package.json
geocoder/wasm-port/src/: lib.rs
geocoder/wasm-port/test/: bench.ts  cache-effect.ts  docker-bench.sh  rss-floor.ts  smoke.ts  throughput.ts
map-styles/: package-lock.json  package.json  tsconfig.json
map-styles/src/: base.json  index.ts  themes.ts
metrics-collector/: package-lock.json  package.json  tsconfig.json  wrangler.toml
metrics-collector/src/: index.ts
styles-gen/: package-lock.json  package.json
tiles/: .eslintrc.cjs  .gitignore  .prettierrc  eslint.config.mjs  package-lock.json  package.json  tsconfig.json  vitest.config.mts  worker-configuration.d.ts  wrangler.toml
tiles/src/: buckets.ts  cache.json  d1-upload.sh  d1-warmer.ts  env.d.ts  index.ts  interface.ts  kv-warmer.ts  monitor.ts  pmtiles.service.ts  r2.ts  repository.ts
tiles/src/pmtiles/: LICENSE  pmtiles.service.ts  pmtiles.ts  types.ts  utils.ts
tiles/test/: env.d.ts  globalSetup.ts  index.spec.ts  tsconfig.json
tiles/test/__snapshots__/: v1-0-0-0.mvt  v1-1-0-1.mvt  v1.json
tiles/test/assets/: tiles.pmtiles
(+6 files in other folders)
