[package]
name = "geocoder-wasm"
version = "0.1.0"
edition = "2021"

[lib]
crate-type = ["cdylib"]

[dependencies]
wasm-bindgen = "0.2"
js-sys = "0.3"
serde = { version = "1", features = ["derive"] }
serde-wasm-bindgen = "0.6"
serde_json = "1"
getrandom = { version = "0.2", features = ["js"] }
s2 = { version = "0.0.13", default-features = false, features = ["serde"] }

[profile.release]
opt-level = 3
lto = true
strip = true

[package.metadata.wasm-pack.profile.release]
# Bundled wasm-opt is too old for the bulk-memory + non-trapping-fp
# features rustc 1.88 emits. Disable it; rustc -O3 + LTO gives 90%
# of the size win anyway.
wasm-opt = false
